--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -188,7 +188,7 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 %%% author(s)
 \author{Torben Miller (Matrikelnummer) \and
 Fabian Biedlingmaier (Matrikelnummer)        \and
-Nicolas Hartliebd (Matrikelnummer)}
+Nicolas Hartlieb (Matrikelnummer)}
 
 %%% date
 \date{Heidelberg, am \today{}}
@@ -282,6 +282,23 @@ Nicolas Hartliebd (Matrikelnummer)}
 %%% begin main document
 %%% structure: \section \subsection \subsubsection \paragraph \subparagraph
 %%%
+
+\section{Zusammenfassung}
+
+\section{Aufgabenstellung} Nico
+\subsection{Maps & Robo} Nico
+\subsection{Technischer Stand minmax Kraftbasiert etc. A Star} Nico
+\subsection{Zielsetzung} Nico
+
+\section{Konzept}
+\subsection{State machine?} Torben
+\subsection{Homing} Torben
+\subsection{Collison Avoidance} Fabian
+
+\section{Dikussion und Ausblick} Alle
+\subsection{Videos} Alle
+\subsection{Szenarien} Alle
+
 
 
 
