--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -81,7 +81,7 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 %%%
 
 %%% scrpage2: KOMA heading and footer
-%%% Note: if you don't use this package, please remove 
+%%% Note: if you don't use this package, please remove
 %%%       \pagestyle{scrheadings} and corresponding settings
 %%%       below too.
 \usepackage[automark]{scrpage2}
@@ -150,7 +150,7 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
   pdftitle={}, %%
   pdfauthor={}, %%
   pdfsubject={}, %%
-  pdfcreator={Accomplished with LaTeX2e and pdfLaTeX with hyperref-package.}, %% 
+  pdfcreator={Accomplished with LaTeX2e and pdfLaTeX with hyperref-package.}, %%
   pdfproducer={}, %%
   pdfkeywords={} %%
 }
@@ -166,7 +166,7 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 %% example: \mygraphics{0.7\textwidth}{rolling_grandma}{This is my grandmother on inlinescates}
 %% requires: package graphicx
 %% provides: including centered pictures/graphics with a boldfaced caption below
-%% 
+%%
 \newcommand{\mygraphics}[3]{
   \begin{center}
     \includegraphics[width=#1, keepaspectratio=true]{#2} \\
@@ -187,7 +187,7 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 
 %%% author(s)
 \author{Torben Miller (Matrikelnummer) \and
-Fabian Biedlingmaier (Matrikelnummer)        \and
+Fabian Biedlingmaier (3224303)        \and
 Nicolas Hartlieb (Matrikelnummer)}
 
 %%% date
@@ -219,7 +219,7 @@ Nicolas Hartlieb (Matrikelnummer)}
 %%% set heading and footer
 %%%
 
-%%% scrheadings default: 
+%%% scrheadings default:
 %%%      footer - middle: page number
 \pagestyle{scrheadings}
 
@@ -272,7 +272,7 @@ Nicolas Hartlieb (Matrikelnummer)}
  \newpage
  \listoftables
 
-%%% display the main document on a new page 
+%%% display the main document on a new page
  \newpage
 
  \pagenumbering{arabic} %% normal page numbers (include it, if roman was used above)
