--- a/documentation/template_bericht.tex
+++ b/documentation/template_bericht.tex
@@ -262,18 +262,18 @@ Third Author (Matrikelnummer)}
 
 %%% start a new page and display the table of contents
 % \newpage
-% \tableofcontents
+\tableofcontents
 
 %%% start a new page and display the list of figures
 % \newpage
-% \listoffigures
+\listoffigures
 
 %%% start a new page and display the list of tables
 % \newpage
-% \listoftables
+\listoftables
 
 %%% display the main document on a new page 
-% \newpage
+\newpage
 
 % \pagenumbering{arabic} %% normal page numbers (include it, if roman was used above)
 
@@ -287,8 +287,8 @@ Third Author (Matrikelnummer)}
 
 
 
-
-
+\section{shiut}
+\subsection{lala}
 
 
 
