--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -324,11 +324,28 @@ aus. Äquivalent dazu löst das gleiche Kriterium im Zustand \glqq go to mid\grq
 Von beiden Zuständen, \glqq go to cheese\grqq{} und \glqq go to mid\grqq{}, findet ein Wechsel in den Zustand \glqq hunt\grqq{} statt, sollte das zweite Kriterium, \glqq$m\_c\_d < P_{1} \land  m\_ch\_d > P_{2} $\grqq{}, erfüllt sein. Im Zustand \glqq hunt\grqq{} greift das dritte Kriterium, \glqq $m\_c\_d + P_{3} < c\_ch\_d$\grqq{}, um den Wechsel in den Zustand \glqq go to cheese\grqq{} einzuleiten.
 \clearpage
 \subsubsection{Zustand: \glqq hunt\grqq{}}
-\label{hunt}
 Grundlegend wird im Zustand \glqq hunt\grqq{} entschieden ob die Maus direkt als Ziel angefahren wird oder ob die Katze versucht die Bewegung der Maus vorrauszusehen.\\
 Das vorrausberechnen der Maus bewegung bezweckt eine Schlingerbewegung der Maus weg vom K"ase. Dieser Ansatz zielt auf das Gegenspiel gegen Kraftbasierte M"ause ab.
 \mygraphics{0.6\textwidth}{ziel.png}{Schlingerbewegung}
-Diese Schlingerbewegung wird errreicht indem 
+
+Um das Verhalten zu erreichen wird die Bewegung der Maus verschieden weit Vorrausberechnet.
+Ist die Katze sehr nah an der Maus so wird die Maus als Ziel genutzt. Ist die Katze nah so wird die Maus maximal weit vorrausbrechnet. Umsoweiter die Katze von der Maus entfernt ist umso weniger weit wird die Maus vorrausberechnet.
+Bis schließlich die Maus wieder als Ziel genutzt wird.
+
+
+
+
+Das Verhalten wird mittels eines r-Wertes erzeugt. Der r-Wert gibt an wie weit die Bewegung der Maus vorrausberechnet wird. Grundlegend benötigt diese Funktion drei Zonen. In der ersten Zone müssen alle Wert null sein, in der Zweiten Zone werden sehr hohe Werte benötigt und in der dritten Zone müssen die Werte langsam fallen.\\
+Er wurde die Funktion $ \frac{2}{x} - \frac{2}{x^3}$ gewählt (\ref{fig:huntFunction.png}).
+
+
+
+
+
+ Grundlegend besitzt die Funktion drei Zonen. In der ersten Zone, befindet sich die Katze sehr nah an der Maus, wird die Maus direkt als Ziel genutzt, In der zweiten Zone wird die Bewegung sehr weit vorrausberechnet und in der dritten Zone wird umsoweiter die Katze von der Maus entfernt ist umso eher wird die Maus als Ziel genutzt.
+
+
+
 \mygraphics{0.9\textwidth}{huntFunction.png}{r-Faktor Funktion}
 \clearpage
 \subsection{Collison Avoidance}
